// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PageUrlDetails Component shows separate URL histories for each version if they differ 1`] = `
<div>
  <details
    class="pageUrlDetails"
  >
    <summary>
      ⚠️ Versions come from different URLs
    </summary>
    <strong>
      From Version URL and Redirects:
    </strong>
    <ol
      class="urlHistoryList"
    >
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          
           
          
        </a>
        <i
          class="fa fa-no-hover fa-right-icon fa-angle-right"
          title="Redirects to"
        />
      </li>
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes/something"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          <ins>
            / something
          </ins>
           
          
           
          
        </a>
      </li>
    </ol>
    <strong>
      To Version URL and Redirects:
    </strong>
    <ol
      class="urlHistoryList"
    >
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          
           
          
        </a>
        <i
          class="fa fa-no-hover fa-right-icon fa-angle-right"
          title="Redirects to"
        />
      </li>
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes/something/else"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          <ins>
            / something
          </ins>
           
          <ins>
            / else
          </ins>
           
          
           
          
        </a>
      </li>
    </ol>
  </details>
</div>
`;

exports[`PageUrlDetails Component shows the versions' URL if it differs from the page's 1`] = `
<div>
  <details
    class="pageUrlDetails"
  >
    <summary>
      ⚠️ Captured from a different URL
    </summary>
    <a
      href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes/something"
      rel="noopener noreferrer"
      target="_blank"
    >
      http://
       
      www
      .
      ncei
      .
      noaa
      .
      gov
       
      / news
       
      / earth-science-conference-convenes
       
      <ins>
        / something
      </ins>
       
      
       
      
    </a>
  </details>
</div>
`;

exports[`PageUrlDetails Component shows the versions' redirects 1`] = `
<div>
  <details
    class="pageUrlDetails"
  >
    <summary>
      ⚠️ Captured URL Redirected Somewhere Else
    </summary>
    <ol
      class="urlHistoryList"
    >
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          
           
          
        </a>
        <i
          class="fa fa-no-hover fa-right-icon fa-angle-right"
          title="Redirects to"
        />
      </li>
      <li>
        <a
          href="http://www.ncei.noaa.gov/news/earth-science-conference-convenes/something"
          rel="noopener noreferrer"
          target="_blank"
        >
          http://
           
          www
          .
          ncei
          .
          noaa
          .
          gov
           
          / news
           
          / earth-science-conference-convenes
           
          <ins>
            / something
          </ins>
           
          
           
          
        </a>
      </li>
    </ol>
  </details>
</div>
`;
